# TOP_PROJECT_GRP

./: README.md
TOP-project/: CMakeLists.txt
TOP-project/include/: types.h
TOP-project/include/stencil/: mesh.h
TOP-project/scripts/: compare.py
TOP-project/src/: CMakeLists.txt  main.c
TOP-project/src/stencil/: comm_handler.c  init.c  mesh.c  solve.c
